[workspace]
resolver = "2"
# Library crates (the framework) live in crates/; runnable demos in examples/.
members = [
    "crates/provably-core",
    "crates/provably-verifier",
    "crates/provably-transport",
    "crates/provably-prover",
    "crates/provably-mpp",
    "examples/mock-llm-api",
    "examples/reseller",
    "examples/buyer",
    "examples/reseller-session",
    "examples/buyer-session",
]

# A provable reseller harness built on the Machine Payments Protocol (MPP).
#
# The `mpp` crate is consumed from the sibling checkout at ../mpp-rs (it is also
# published on crates.io as `mpp = "0.10"`). `tempo` pulls in the Tempo testnet
# payment method; individual member crates layer `server` / `client` on top.
[workspace.dependencies]
mpp = { path = "../mpp-rs", features = ["tempo"] }

provably-core = { path = "crates/provably-core" }
provably-verifier = { path = "crates/provably-verifier" }
provably-transport = { path = "crates/provably-transport" }
provably-prover = { path = "crates/provably-prover" }
provably-mpp = { path = "crates/provably-mpp" }

alloy = { version = "2.0", features = ["provider-http"] }
tempo-alloy = "1.8.0"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
