[workspace]
resolver = "2"
# Library crates (the framework) live in crates/; runnable demos in examples/.
members = [
    "crates/provably-core",
    "crates/provably-verifier",
    "crates/provably-transport",
    "crates/provably-prover",
    "crates/provably-mpp",
    "examples/harness",
    "examples/buyer",
]
# The TLSNotary integration (notary + reseller-prover) lives in the isolated `tlsn/`
# workspace: it pulls the heavy alpha `tlsn`/`mpz` MPC tree, which we keep out of the
# default `cargo build --workspace` loop. Build it from its own dir (it pins
# rustc >= 1.95 via rust-toolchain.toml, which rustup only honors from that directory):
#   cd tlsn && cargo build
exclude = ["tlsn"]

# Shared package metadata inherited by every member via `*.workspace = true`.
[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

# A provable reseller harness built on the Machine Payments Protocol (MPP).
#
# `mpp` is the published crate (https://crates.io/crates/mpp), so a fresh clone builds
# with no extra checkout. Maintainers developing `mpp` locally can override it with a
# sibling checkout via a gitignored `.cargo/config.toml`: `paths = ["../mpp-rs"]`.
# `tempo` pulls in the Tempo testnet payment method; member crates layer server/client.
[workspace.dependencies]
mpp = { version = "0.10", features = ["tempo"] }

provably-core = { path = "crates/provably-core" }
provably-verifier = { path = "crates/provably-verifier" }
provably-transport = { path = "crates/provably-transport" }
provably-prover = { path = "crates/provably-prover" }
provably-mpp = { path = "crates/provably-mpp" }
harness = { path = "examples/harness" }

alloy = { version = "2.0", features = ["provider-http"] }
tempo-alloy = "1.8.0"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
