# The reseller, adapted into the **TLSNotary Prover** (proxy mode).
#
# Same payment-gated proxy as `examples/reseller`, but instead of calling upstream
# with reqwest and signing its own claim, it routes the upstream TLS call through
# the `tls-notary` process: it is the TLSNotary *Prover*, the notary witnesses and
# signs, and the reseller relays that signed attestation to the buyer. It can no
# longer forge the leg.
#
# Like `tls-notary`, this pulls the alpha `tlsn`/`mpz` tree, so it is its own
# isolated workspace (empty `[workspace]` below), excluded from the parent. Build
# from this dir so the rustc >= 1.95 pin applies:
#   cd reseller-tlsn && cargo run
[package]
name = "reseller-tlsn"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "reseller-tlsn"
path = "src/main.rs"

[dependencies]
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "90ce52ad2885b97e4ce676cc9335065032712477", features = ["mozilla-certs"] }

# Light, tlsn-free crates from the core workspace (path deps across the workspace
# boundary — fine, they don't pull tlsn).
provably-core = { path = "../crates/provably-core" }
provably-mpp = { path = "../crates/provably-mpp" }
provably-transport = { path = "../crates/provably-transport" }   # default features: ed25519 only, for the notary pubkey

mpp = { path = "../../mpp-rs", features = ["tempo", "server"] }
alloy = { version = "2.0", features = ["provider-http"] }
tempo-alloy = "1.8.0"

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace]
