# The third-party TLSNotary notary, running in **proxy mode**.
#
# This is the separate witnessing party that makes a leg proof trustless: the
# reseller (the TLSNotary *Prover*) cannot produce a leg attestation alone — it
# must run its upstream TLS call through this process, which proxies the traffic,
# cryptographically verifies the TLS session, and signs the resulting claim with
# a key the reseller does not hold. The buyer pins *this* key.
#
# It depends on the alpha `tlsn` crate, which drags in the whole MPC/`mpz` tree.
# To keep the provably workspace's `cargo build --workspace` loop fast, this crate
# is its own isolated workspace (note the empty `[workspace]` table below) and is
# `exclude`d from the parent workspace. Build it from this dir (so the
# rust-toolchain.toml pin to rustc >= 1.95 is honored):
#   cd tls-notary && cargo build
[package]
name = "tls-notary"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tls-notary"
path = "src/main.rs"

[dependencies]
# Pinned to a known-good revision: tlsn is pre-1.0 alpha and its API shifts
# between releases. (v0.1.0-alpha.16-pre at this rev.)
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "90ce52ad2885b97e4ce676cc9335065032712477", features = ["mozilla-certs"] }

# Reuse the canonical claim type + signing identity rather than inventing a second.
provably-core = { path = "../crates/provably-core" }
provably-transport = { path = "../crates/provably-transport" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
anyhow = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Isolated workspace: keeps the heavy alpha dependency tree out of the parent
# provably workspace's default build.
[workspace]
