[package]
name = "buyer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "buyer"
path = "src/main.rs"

[dependencies]
mpp = { workspace = true, features = ["client"] }
provable-notary = { workspace = true }

alloy = { workspace = true }
tempo-alloy = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
