[package]
name = "provable-notary"
version = "0.1.0"
edition = "2021"
publish = false
description = "Toy zkTLS notary: signed transcript commitments binding a payment to upstream bytes."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
