[package]
name = "provably-core"
version = "0.1.0"
edition = "2021"
publish = false
description = "API-agnostic proof interface: leg attestations, harness receipts, the verifier."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
