[package]
name = "provably-mpp"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false
description = "Conventions binding a HarnessReceipt to MPP settlement: advertise, attach, gate."

[dependencies]
provably-core = { workspace = true }
provably-verifier = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
