[package]
name = "reseller"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "reseller"
path = "src/main.rs"

[dependencies]
mpp = { workspace = true, features = ["server"] }
provable-notary = { workspace = true }

alloy = { workspace = true }
tempo-alloy = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
