[package]
name = "buyer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "buyer"
path = "src/main.rs"

[dependencies]
mpp = { workspace = true, features = ["client"] }
provably-core = { workspace = true }
provably-verifier = { workspace = true }
provably-mpp = { workspace = true }
harness = { workspace = true }

alloy = { workspace = true }
tempo-alloy = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
