[package]
name = "reseller"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "reseller"
path = "src/main.rs"

[dependencies]
mpp = { workspace = true, features = ["server"] }
provably-core = { workspace = true }
provably-transport = { workspace = true }
provably-mpp = { workspace = true }

alloy = { workspace = true }
tempo-alloy = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
